; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_maestro.c_wp_stoptimer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/pci/extr_maestro.c_wp_stoptimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.agg_info = type { i32 }

@PORT_HOSTINT_CTRL = common dso_local global i32 0, align 4
@HOSTINT_CTRL_DSOUND_INT_ENABLED = common dso_local global i32 0, align 4
@PORT_INT_STAT = common dso_local global i32 0, align 4
@WPREG_TIMER_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.agg_info*)* @wp_stoptimer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wp_stoptimer(%struct.agg_info* %0) #0 {
  %2 = alloca %struct.agg_info*, align 8
  store %struct.agg_info* %0, %struct.agg_info** %2, align 8
  %3 = load %struct.agg_info*, %struct.agg_info** %2, align 8
  %4 = load i32, i32* @PORT_HOSTINT_CTRL, align 4
  %5 = load i32, i32* @HOSTINT_CTRL_DSOUND_INT_ENABLED, align 4
  %6 = xor i32 %5, -1
  %7 = load %struct.agg_info*, %struct.agg_info** %2, align 8
  %8 = load i32, i32* @PORT_HOSTINT_CTRL, align 4
  %9 = call i32 @AGG_RD(%struct.agg_info* %7, i32 %8, i32 2)
  %10 = and i32 %6, %9
  %11 = call i32 @AGG_WR(%struct.agg_info* %3, i32 %4, i32 %10, i32 2)
  %12 = load %struct.agg_info*, %struct.agg_info** %2, align 8
  %13 = load i32, i32* @PORT_INT_STAT, align 4
  %14 = call i32 @AGG_WR(%struct.agg_info* %12, i32 %13, i32 1, i32 2)
  %15 = load %struct.agg_info*, %struct.agg_info** %2, align 8
  %16 = load i32, i32* @WPREG_TIMER_START, align 4
  %17 = call i32 @wp_wrreg(%struct.agg_info* %15, i32 %16, i32 0)
  ret void
}

declare dso_local i32 @AGG_WR(%struct.agg_info*, i32, i32, i32) #1

declare dso_local i32 @AGG_RD(%struct.agg_info*, i32, i32) #1

declare dso_local i32 @wp_wrreg(%struct.agg_info*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
